--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -1,5 +1,16 @@
-body{
+body{background-color: rgb(103, 118, 107);
     line-height: 2;
+}
+
+.border{
+    background-color: rgb(230, 230, 230);
+    box-shadow: 0 4px 10px rgb(0, 0, 0);
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    border: 5px solid rgb(0, 0, 0);
+    width: 50%;
+    margin: 50px auto;
+    padding: 40px;
+    display: block;
 }
 
 .name-row{
@@ -15,7 +26,7 @@ body{
 }
 
 select{
-    width: 250px;
+    width: 25%;
     height: 45px;
     font-size: 16px;
     flex: 1;
