--- a/registration/external_registration.css
+++ b/registration/external_registration.css
@@ -1,6 +1,20 @@
 body{
     line-height: 4.5;
+    background-color: rgb(77, 103, 89);
 }
+
+.border{
+    background-color: rgb(230, 230, 230);
+    box-shadow: 0 4px 10px rgb(0, 0, 0);
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    border: 5px solid rgb(0, 0, 0);
+    width: 50%;
+    margin: 50px auto;
+    padding: 40px;
+    display: block;
+}
+
+
 
 .name-row{
     display:flex;
